@@ -1017,7 +1017,12 @@ public:
     /**
      * Remove the specified entry in ItemComments
      */
-    void removeImageComment(int commentId, qlonglong imageid);
+    void removeImageComment(int commentId, qlonglong imageID);
+
+    /**
+     * Remove all ItemComments
+     */
+    void removeAllImageComments(qlonglong imageID);
 
     /**
      * Returns the property with the specified name for the specified image
@@ -1030,6 +1035,7 @@ public:
     void setImageProperty(qlonglong imageID, const QString& property, const QString& value);
     void removeImageProperty(qlonglong imageID, const QString& property);
     void removeImagePropertyByName(const QString& property);
+    void removeAllImageProperties(qlonglong imageID);
 
     /**
      * Returns the copyright properties of the specified image.
@@ -1060,6 +1066,11 @@ public:
     void removeItemCopyrightProperties(qlonglong imageID, const QString& property = QString(),
                                         const QString& extraValue = QString(),
                                         const QString& value = QString() /* NOTE parameter order */);
+
+    /**
+     * Removes all copyright properties for the given image id.
+     */
+    void removeAllItemCopyrightProperties(qlonglong imageID);
 
     /**
      * Returns all items with the given file name and creation date.
@@ -1374,14 +1385,6 @@ public:
      * Copies all entries in the ImageTags table.
      */
     void copyImageTags(qlonglong srcId, qlonglong dstId);
-
-    // ------------ Clear all Item Metadata -----------
-
-    /**
-     * Clear all metadata of an item
-     * @param  imageID the ID of the item
-     */
-    void clearMetadataFromImage(qlonglong imageID);
 
     // ----------- Download history methods -----------
 
